--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,12 +12,9 @@
         {% include search.html %}
     {% else %}
         <div class="ui text container">
-            {% if page.active_key == 'analytics' %}
-                <h1 class="ui inverted header"><i class="line chart icon"></i>访客分析</h1>
-                <h2>上线 <span id="site-since-days">0</span> 天 &middot; 页面浏览 <span id="total-actions">0</span> 次</h2>
-            {% elsif page.active_key == 'donate' %}
-                <h1 class="ui inverted header"><i class="coffee icon"></i>爱心投喂</h1>
-                <h2>请为辛苦滴开发者众筹一杯咖啡</h2>
+            {% if page.active_key == 'security' %}
+                <h1 class="ui inverted header"><i class="laptop icon"></i>安全相关</h1>
+                <h2>Hacking everything，Everything is hacking</h2>
             {% elsif page.active_key == 'search' %}
                 <h1 class="ui inverted header"><i class="search icon"></i>正在检索</h1>
             {% elsif page.active_key == 'error' %}
