--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="generator" content="Jekyll v{{ jekyll.version }}">
     <meta name="repository" content="{{ site.repository }}">
-    <meta name="updated_at" content="{{ site.time | date_to_xmlschema }}">
     {% seo %}
     <link rel="stylesheet" type="text/css" href="//unpkg.com/semantic-ui/dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/common.css' | relative_url }}">
     {% if page.active_key == 'home' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/home.css' | relative_url }}">{% endif %}
-    {% if page.active_key == 'analytics' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/analytics.css' | relative_url }}">{% endif %}
-    {% if page.active_key == 'donate' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/donate.css' | relative_url }}">{% endif %}
+    {% if page.active_key == 'security' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/security.css' | relative_url }}">{% endif %}
     {% if page.active_key == 'search' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/search.css' | relative_url }}">{% endif %}
     {% if page.active_key == 'error' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/error.css' | relative_url }}">{% endif %}
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/masthead.css' | relative_url }}">
@@ -37,12 +35,5 @@
     {% if page.active_key == 'home' %}<script type="text/javascript" src="{{ '/assets/js/suggest-query.js' | relative_url }}"></script>{% endif %}
     <script type="text/javascript" src="{{ '/assets/js/common.js' | relative_url }}"></script>
     {% if page.active_key == 'home' %}<script type="text/javascript" src="{{ '/assets/js/home.js' | relative_url }}"></script>{% endif %}
-    {% if page.active_key == 'analytics' %}<script type="text/javascript" src="//unpkg.com/countup/dist/countUp.min.js"></script>{% endif %}
-    {% if page.active_key == 'analytics' %}<script type="text/javascript" src="//unpkg.com/echarts/dist/echarts.min.js"></script>{% endif %}
-    {% if page.active_key == 'analytics' %}<script type="text/javascript" src="//unpkg.com/echarts/theme/macarons.js"></script>{% endif %}
-    {% if page.active_key == 'analytics' %}<script type="text/javascript" src="//unpkg.com/echarts/map/js/world.js"></script>{% endif %}
-    {% if page.active_key == 'analytics' %}<script type="text/javascript" src="{{ '/assets/js/analytics.js' | relative_url }}"></script>{% endif %}
-    {% if page.active_key == 'search' %}<script type="text/javascript" src="//unpkg.com/js-url/url.min.js"></script>{% endif %}
-    {% if page.active_key == 'search' %}<script type="text/javascript" src="{{ '/assets/js/search.js' | relative_url }}"></script>{% endif %}
 </body>
 </html>
