--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -93,7 +93,8 @@
 }
 
 .footer.segment {
-    padding: 5em 0em;
+    padding: 3em 0em;
+    text-align: center
 }
 
 .secondary.pointing.menu .toc.item {
