Add some content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="ui inverted vertical footer segment">
     <div class="ui inverted link list">
-        <div class="item">Copyright &copy; {{ site.time | date: "%Y" }} {{ site.organization }} navi.acusp.info 2017</div>
+        <div class="item">Copyright &copy; {{ site.time | date: "%Y" }} {{ site.organization }} navi.acusp.info</div>
     </div>
 </div>
