--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,9 @@
             {% if page.active_key == 'security' %}
                 <h1 class="ui inverted header"><i class="laptop icon"></i>安全相关</h1>
                 <h2>Hacking everything，Everything is hacking</h2>
-            {% elsif page.active_key == 'search' %}
-                <h1 class="ui inverted header"><i class="search icon"></i>正在检索</h1>
+            {% elsif page.active_key == 'tool' %}
+                <h1 class="ui inverted header"><i class="configure icon"></i>实用工具</h1>
+                <h2>工欲善其事，必先利其器</h2>
             {% elsif page.active_key == 'error' %}
                 <h1 class="ui inverted header"><i class="frown icon"></i>Page Not Found</h1>
             {% endif %}
