--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/common.css' | relative_url }}">
     {% if page.active_key == 'home' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/home.css' | relative_url }}">{% endif %}
-    {% if page.active_key == 'security' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/security.css' | relative_url }}">{% endif %}
-    {% if page.active_key == 'search' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/search.css' | relative_url }}">{% endif %}
+    {% if page.style == 'pages' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/pages.css' | relative_url }}">{% endif %}
     {% if page.active_key == 'error' %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/error.css' | relative_url }}">{% endif %}
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/masthead.css' | relative_url }}">
     <link rel="apple-touch-icon" type="image/png" href="{{ '/images/apple-touch-icon.png' | relative_url }}">
