Add program item

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
             {% elsif page.active_key == 'tool' %}
                 <h1 class="ui inverted header"><i class="configure icon"></i>实用工具</h1>
                 <h2>工欲善其事，必先利其器</h2>
+            {% elsif page.active_key == 'program' %}
+                <h1 class="ui inverted header"><i class="configure icon"></i>编程相关</h1>
+                <h2>知识就是力量，编程改变世界</h2>
             {% elsif page.active_key == 'error' %}
                 <h1 class="ui inverted header"><i class="frown icon"></i>Page Not Found</h1>
             {% endif %}
